@@ -5,7 +5,7 @@ persistent=no
 [MESSAGES CONTROL]
 disable-checker=design,similarities
 disable-msg-cat=
-disable-msg=C0111,I0011,R0201,W0142,W0212,W0402,W0403,W0703,W0704,W1010
+disable-msg=C0111,C0322,I0011,R0201,W0142,W0212,W0402,W0403,W0703,W0704,W1010
 
 [REPORTS]
 comment=no
